found an earlier work attempting tas path-finding

--- a/tex/paths.tex
+++ b/tex/paths.tex
@@ -248,10 +248,10 @@ or tubes, but these cases we can treat as their own one-dimensional problem.
 
 A further simplification is possible when taking into account that during a 
 typical experiment the instrument usually only moves either its monochromator 
-or analyser angle to choose the energy transfer, but not both. 
+or analyser scattering angle to choose the energy transfer, but not both. 
 Therefore, one of these angles, usually the analyser angle, rests at a constant 
 value. In total, we are left with a two-dimensional configuration space composed 
-of the monochromator and the sample scattering angle. 
+of either the monochromator or analyser angle as well the sample scattering angle. 
 A typical situation is shown in Fig. \ref{fig:tas_wall} (a and c). 
 As before, the instrument motion is blocked by an obstacle in the experimental zone. 
 The angular configuration space image, panel (c), shows that the obstacle 
