--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -349,6 +349,18 @@
 	issn = {1612-3786},
 }
 
+
+@incollection
+{
+	Biswas2012,
+	title = {{Depth camera based indoor mobile robot localization and navigation}},
+	author = {Biswas, Joydeep and Veloso, Manuela},
+	booktitle = {2012 IEEE International Conference on Robotics and Automation},
+	year = {2012},
+	pages = {1697-1702},
+	doi = {10.1109/ICRA.2012.6224766}
+}
+
 % -----------------------------------------------------------------------------
 
 
@@ -729,15 +741,15 @@
 }
 
 
-@incollection
+@inproceedings
 {
-	Biswas2012,
-	title = {{Depth camera based indoor mobile robot localization and navigation}},
-	author = {Biswas, Joydeep and Veloso, Manuela},
-	booktitle = {2012 IEEE International Conference on Robotics and Automation},
-	year = {2012},
-	pages = {1697-1702},
-	doi = {10.1109/ICRA.2012.6224766}
+	Muehlbauer2006,
+	author = {M\"uhlbauer, Quirin and Hradil, Klaudia},
+	title = {{Monitoring and Preventing Collisions for a Triple Axis Spectrometer}}, 
+	booktitle = {{Proceedings of the 2006 IEEE International Conference on Control Applications, Munich, Germany, October 4-6, 2006}},
+	year = {2006},
+	pages = {1795-1800},
+	doi = {10.1109/CACSD-CCA-ISIC.2006.4776913},
 }
 
 
