continued with discussion

--- a/tex/algos.tex
+++ b/tex/algos.tex
@@ -204,6 +204,7 @@ approximations of the skeletons to the site curves.
 
 
 \subsection{Software libraries}
+\label{sec:voronoi_libs}
 A stable and efficient C/C++ library for calculating Voronoi diagram in $\mathbb{R}^n$ is the popular and very 
 high-quality \textit{QHull} library by C. B. Barber \cite{web_qhull}. While it does only calculate 
 the Voronoi diagrams for vertices, and not for line segments, it is also capable of calculation the Delaunay
