--- a/tex/foreword.tex
+++ b/tex/foreword.tex
@@ -32,8 +32,10 @@ Chapter \ref{ch:gl} contains a brief introduction to the mathematics of three-di
 This maths is made use of in chapter \ref{ch:gui} which is concerned about the user interfaces to the software
 developed in this work. The user interfaces include a graphical one based on an interactive, three-dimensional
 view of the instrument, as well as a purely command-line scripting interface.
-The closing chapters, \ref{ch:tests} and \ref{ch:outlook}, describe unit testing necessary for maintaining
-a reasonably sized software relatively bug-free and give an outlook on future developments.
+Chapter \ref{ch:tests} describes unit testing necessary for maintaining
+a reasonably sized software relatively bug-free.
+The closing chapter, \ref{ch:outlook}, discusses the results and gives an outlook 
+on future developments.
 
 \paragraph{Accompanying software}
 The source code of the software that is part of this work is provided on a supplementary 
